--- a/style.css
+++ b/style.css
@@ -7,6 +7,22 @@
     margin-top: 40px;
 }
 
+.reset-button {
+    font-size: 12px;
+    font-weight: 500;
+    background-color: black; 
+    color: #e31826;
+  
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 24px;
+    padding-right: 24px;
+  
+    border-radius: 4px;
+    cursor: pointer;
+} 
+
+
 .primul-tab{
     font-size: 12px;
     font-weight: 500;
