--- a/style.css
+++ b/style.css
@@ -3,8 +3,6 @@
     padding: 0px;
     border: none;
     font-family: "Ubuntu Sans", sans-serif;
-    text-align: center;
-    margin-top: 40px;
 }
 
 .reset-button {
@@ -39,10 +37,7 @@
 }
 
 .primul-paragraf{
-    display: none;
     color: #dc0f12;
-    margin-left: 30px;
-    margin-right: 30px;
 }
 
 .al-doilea-tab{
@@ -63,8 +58,6 @@
 .al-doilea-paragraf{
     display: none;
     color: rgb(209, 193, 16); 
-    margin-left: 30px;
-    margin-right: 30px;
 }
 
 .al-treilea-tab{
@@ -85,6 +78,42 @@
 .al-treilea-paragraf{
     display: none;
     color: #112993;
-    margin-left: 30px;
-    margin-right: 30px;
+}
+
+.tab-content-paragraf{
+    border-color: black;
+    border-width: 1px;
+    border-style: solid;
+    max-width: 400px;
+    padding: 24px;
+}
+
+.active-tab{
+    border-color: black;
+    border-width: 4px;
+    border-style: solid;
+}
+
+.content-more-unu{
+
+}
+
+.lorem-content-unu{
+    display: none;
+}
+
+.content-more-doi{
+
+}
+
+.lorem-content-doi{
+    display: none;
+}
+
+.content-more-trei{
+
+}
+
+.lorem-content-trei{
+    display: none;
 }
