nu stiu de ce nu functioneaza butonul de see les la tab 2 si 3

--- a/style.css
+++ b/style.css
@@ -117,3 +117,15 @@
 .lorem-content-trei{
     display: none;
 }
+
+.less-content-more-unu{
+    display: none;
+}
+
+.less-content-more-doi{
+    display: none;
+}
+
+.less-content-more-trei{
+    display: none;
+}
